# misinformation-classification

./: .gitignore  .pre-commit-config.yaml  README.md  finetune.py  main.py  pyproject.toml
scripts/: format.sh
src/: conf.py  generate_positive_samples.py  load_raw_data.py  serializer.py  utils.py
src/binary_cls/: __init__.py  _build_data_set.py  _predict.py  prompt.txt
src/classification/binary/: _build_data_set.py  _predict.py
src/classification/multiclass/: __init__.py  _build_data_set.py  _predict.py  prompt.txt
src/data_synthesis/: __init__.py  _load.py  _prompts_gen.py
src/data_synthesis/personae/: climate_enthusiast.txt  newbie.txt
src/eval/: explanability.py  metrics.py
src/evaluation/: explanability.py  metrics.py
src/fine_tune/: __init__.py  _build_data_set.py  _run.py  prompt.txt
src/inference/: __init__.py  _batch_inference.py  _inference.py
src/mistral/: __init__.py  finetune.py  ocr.py  utils.py
src/mistral/inference/: __init__.py  batch.py  simple.py
src/mistral/prep/: __init__.py  _binary_cls.py  _finetune.py  _multi_cls.py  _utils.py
src/mistral/results/: __init__.py  _binary_cls.py  _multi_cls.py  _utils.py
src/processing/: __init__.py  _ipcc.py  _quota_climat.py  constants.py  quota_climat.py  reformat_data.py
src/processing/ipcc/: __init__.py  _request_batch.py  load.py  parse.py  prompt.txt  request_gen.py
src/processing/ipcc/personae/: scientist.txt
src/processing/task/: __init__.py  _binary_cls.py  _finetune.py  _multi_cls.py  _utils.py
src/prompts/: __init__.py  _load.py  multi_cls_few_shots.txt
src/utils/: __init__.py  _serializer.py  logging.py  utils.py
